# ffflow

./: .gitignore  Cargo.toml  README.md  doc.md
src/: cli.rs  main.rs  repl.rs  tui.rs
src/core/: batch.rs  command.rs  error.rs  event.rs  formatter.rs  job.rs  metadata.rs  mod.rs  progress.rs  runner.rs  summary.rs
src/util/: mod.rs
