[package]
name = "ffflow"
version = "0.1.0"
edition = "2021"
description = "FFmpeg workflow TUI"
license = "MIT"
repository = "https://github.com/yugaaank/ffflow"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md", "Cargo.toml"]

[[bin]]
name = "ffflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
shell-words = "1.1"

