[package]
name = "ffflow"
version = "0.1.1"
edition = "2021"

description = "FFmpeg workflow automation CLI/TUI with real-time progress tracking"
license = "MIT"
repository = "https://github.com/yugaaank/ffflow"
homepage = "https://github.com/yugaaank/ffflow"
documentation = "https://docs.rs/ffflow"
readme = "README.md"

keywords = ["ffmpeg", "cli", "tui", "video", "encoding"]
categories = ["command-line-utilities"]

include = [
"src/**/*",
"LICENSE",
"README.md",
"Cargo.toml"
]

[[bin]]
name = "ffflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
shell-words = "1.1"

